@@ -1,21 +1,24 @@
 package view.MainScreen;
 
-import Interface.*;
-import javafx.animation.TranslateTransition;
+import Interface.IMenuItem;
+import Interface.IMenuService;
+import Interface.IOrder;
+import Interface.IOrderItem;
+import javafx.fxml.FXMLLoader;
+import javafx.geometry.Insets;
+
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.fxml.FXML;
-import javafx.fxml.FXMLLoader;
 import javafx.geometry.Pos;
 import javafx.scene.Parent;
 import javafx.scene.Scene;
 import javafx.scene.control.*;
 import javafx.scene.image.ImageView;
-import javafx.scene.layout.FlowPane;
-import javafx.scene.layout.Pane;
-import javafx.scene.layout.VBox;
-import javafx.util.Duration;
-import view.MockTest.*;
+import javafx.scene.layout.*;
+import view.MockTest.MockMenuService;
+import view.MockTest.MockOrder;
+import view.MockTest.MockOrderItem;
 import view.PaymentPage.PaymentController;
 import view.Wrapper.OrderItemWrapper;
 
@@ -23,174 +26,192 @@ import java.io.IOException;
 import java.text.NumberFormat;
 import java.util.List;
 import java.util.Locale;
+import java.util.stream.Collectors;
 
 public class MainController {
 
+    // --- FXML UI COMPONENTS ---
     @FXML private TextField searchField;
     @FXML private FlowPane menuGrid;
 
-    @FXML private TableView<OrderItemWrapper> orderTable;
+    @FXML private TableView<OrderItemWrapper> orderTable; // TableView vẫn dùng Class cụ thể để bind property
     @FXML private TableColumn<OrderItemWrapper, String> colName;
     @FXML private TableColumn<OrderItemWrapper, Number> colQty;
     @FXML private TableColumn<OrderItemWrapper, Number> colTotal;
 
+    @FXML private Label subTotalLabel;
     @FXML private Label totalLabel;
 
-    /* HAMBURGER ELEMENT */
-    @FXML
-    private Button menuButton;
-    @FXML
-    private VBox slideMenu;
-    private boolean menuOpen = false;
+    // --- DATA & SERVICES ---
+    private List<IMenuItem> fullMenu;
 
+    // Gọi Service thông qua Interface
+    private IMenuService menuService;
 
-    private IMenuService iMenuService = new MockMenuService();
-    private IOrderService iOrderService = new MockOrderService();
+    // Danh sách hiển thị trên bảng order
     private ObservableList<OrderItemWrapper> currentOrder = FXCollections.observableArrayList();
 
+    // Formatter tiền tệ VNĐ
     private NumberFormat currencyFormatter = NumberFormat.getCurrencyInstance(new Locale("vi", "VN"));
 
     @FXML
     public void initialize() {
-        loadMockData();
+        // 1. Khởi tạo Service
+        menuService = new MockMenuService();
+
+        // 2. Lấy dữ liệu từ Service
+        fullMenu = menuService.getAllItems();
+
+        // 3. Setup giao diện
         setupTable();
-        renderMenuGrid(iMenuService.getAllItems());
+        renderMenuGrid(fullMenu); // Hiển thị tất cả ban đầu
 
-        searchField.textProperty().addListener((o, oldVal, newVal) -> handleSearch(newVal));
-// Ẩn menu ban đầu
-        slideMenu.setTranslateX(-220);
-        menuButton.setOnAction(e -> {
-            if (!menuOpen) {
-                showOverlay();
-            } else {
-                hideOverlay();
-            }
-            menuOpen = !menuOpen;
+        // 4. Listener tìm kiếm
+        searchField.textProperty().addListener((observable, oldValue, newValue) -> {
+            handleSearch(newValue);
         });
-
-
     }
-// hiệu ứng slidebả cho thanh trượt menu
-    private void showOverlay() {
-        TranslateTransition tt = new TranslateTransition(Duration.millis(400), slideMenu);
-        tt.setToX(0);
-        tt.play();
-    }
-
-    private void hideOverlay() {
-        TranslateTransition tt = new TranslateTransition(Duration.millis(200), slideMenu);
-        tt.setToX(-220);
-        tt.play();
-    }
-
-
-    private void hideSlideMenu() {
-        javafx.animation.TranslateTransition tt = new javafx.animation.TranslateTransition(
-                javafx.util.Duration.millis(200), slideMenu);
-        tt.setToX(-220); // trượt ra ngoài
-        tt.play();
-
-        menuOpen = false;
-        menuButton.setVisible(false);
-    }
-
-    private void loadMockData() {}
 
     private void setupTable() {
-        colName.setCellValueFactory(c -> c.getValue().nameProperty());
-        colQty.setCellValueFactory(c -> c.getValue().quantityProperty());
-        colTotal.setCellValueFactory(c -> c.getValue().subtotalProperty());
+        // Thêm đoạn này để menu luôn căn chỉnh đẹp
+        menuGrid.setAlignment(Pos.TOP_CENTER);
+        menuGrid.setPadding(new Insets(20, 20, 50, 20)); // Padding dưới 50 để ko bị che bởi mép màn hình
+        // Cấu hình cột cho bảng Order
+        colName.setCellValueFactory(cellData -> cellData.getValue().nameProperty());
+        colQty.setCellValueFactory(cellData -> cellData.getValue().quantityProperty());
 
-        colTotal.setCellFactory(tc -> new TableCell<>() {
+        // Format cột tiền tệ
+        colTotal.setCellValueFactory(cellData -> cellData.getValue().subtotalProperty());
+        colTotal.setCellFactory(tc -> new TableCell<OrderItemWrapper, Number>() {
             @Override
             protected void updateItem(Number price, boolean empty) {
                 super.updateItem(price, empty);
-                setText(empty ? null : currencyFormatter.format(price));
+                if (empty) {
+                    setText(null);
+                } else {
+                    setText(currencyFormatter.format(price));
+                }
             }
         });
 
         orderTable.setItems(currentOrder);
     }
 
-    /* RENDER PRODUCT CARD */
+    // --- LOGIC GIAO DIỆN (MENU) ---
+
+    // Hàm render nhận vào danh sách Interface IMenuItem
     private void renderMenuGrid(List<IMenuItem> items) {
         menuGrid.getChildren().clear();
         for (IMenuItem item : items) {
-            menuGrid.getChildren().add(createProductCard(item));
+            VBox card = createProductCard(item);
+            menuGrid.getChildren().add(card);
         }
     }
 
+    // Tạo thẻ sản phẩm từ Interface
     private VBox createProductCard(IMenuItem item) {
-        VBox card = new VBox(5);
-        card.setPrefSize(150, 200);
+        VBox card = new VBox(10); //
+        double cardWidth = 190;   // Tăng độ rộng thẻ một chút
+        card.setPrefWidth(cardWidth);
+        card.setMaxWidth(cardWidth);
         card.getStyleClass().add("product-card");
         card.setAlignment(Pos.CENTER);
+        card.setPadding(new javafx.geometry.Insets(15)); // Padding nội bộ thẻ
 
+        // --- XỬ LÝ ẢNH ---
         ImageView imageView = new ImageView();
-        try { imageView.setImage(item.getImage()); } catch (Exception ignored) {}
 
-        imageView.setFitHeight(100);
-        imageView.setFitWidth(100);
-        imageView.setPreserveRatio(true);
+        // Xử lý trường hợp ảnh lỗi hoặc null (Best practice)
+        try {
+            imageView.setImage(item.getImage());
+        } catch (Exception e) {
+            // Có thể set ảnh placeholder ở đây nếu muốn
+        }
+
+        imageView.setFitWidth(130);
+        imageView.setFitHeight(130);
+        imageView.setPreserveRatio(true); // Giữ tỷ lệ ảnh
+
+        // Bo tròn ảnh (Soft square)
+        javafx.scene.shape.Rectangle clip = new javafx.scene.shape.Rectangle(130, 130);
+        clip.setArcWidth(30); // Bo tròn nhiều hơn cho mềm mại
+        clip.setArcHeight(30);
+        imageView.setClip(clip);
+
+        // --- THÔNG TIN TEXT ---
+        VBox infoBox = new VBox(6);
+        infoBox.setAlignment(Pos.CENTER);
 
         Label nameLabel = new Label(item.getName());
         nameLabel.getStyleClass().add("card-title");
         nameLabel.setWrapText(true);
+        nameLabel.setTextAlignment(javafx.scene.text.TextAlignment.CENTER);
+        nameLabel.setMinHeight(40); // Cố định chiều cao tên để thẻ đều nhau
 
         Label priceLabel = new Label(currencyFormatter.format(item.getPrice()));
         priceLabel.getStyleClass().add("card-price");
 
-        card.getChildren().addAll(imageView, nameLabel, priceLabel);
+        infoBox.getChildren().addAll(nameLabel, priceLabel);
+        card.getChildren().addAll(imageView, infoBox);
 
-        card.setOnMouseClicked(event -> addToCart(item));
+        // --- SỰ KIỆN CLICK & ANIMATION ---
+        card.setOnMouseClicked(e -> {
+            addToCart(item);
+            // Hiệu ứng nhún nhẹ khi click
+            javafx.animation.ScaleTransition st = new javafx.animation.ScaleTransition(javafx.util.Duration.millis(100), card);
+            st.setFromX(1.0); st.setFromY(1.0);
+            st.setToX(0.95); st.setToY(0.95);
+            st.setAutoReverse(true);
+            st.setCycleCount(2);
+            st.play();
+        });
+
         return card;
     }
 
-    /* SEARCH */
     private void handleSearch(String keyword) {
         if (keyword == null || keyword.isEmpty()) {
-            renderMenuGrid(iMenuService.getAllItems());
+            renderMenuGrid(fullMenu);
             return;
         }
-        List<IMenuItem> filtered = iMenuService.getAllItems().stream()
+        // Stream filter trên Interface
+        List<IMenuItem> filtered = fullMenu.stream()
                 .filter(m -> m.getName().toLowerCase().contains(keyword.toLowerCase()))
-                .toList();
+                .collect(Collectors.toList());
         renderMenuGrid(filtered);
     }
 
-    /* FILTERS */
-    @FXML private void filterAll() {
-        renderMenuGrid(iMenuService.getAllItems());
-        hideOverlay();
+    // Các nút lọc danh mục
+    @FXML void filterAll() { renderMenuGrid(fullMenu); }
+    @FXML void filterDrink() {
+        renderMenuGrid(fullMenu.stream().filter(m -> "Drink".equalsIgnoreCase(m.getCategory())).collect(Collectors.toList()));
+    }
+    @FXML void filterFood() {
+        renderMenuGrid(fullMenu.stream().filter(m -> "Food".equalsIgnoreCase(m.getCategory())).collect(Collectors.toList()));
     }
 
-    @FXML private void filterDrink() {
-        renderMenuGrid(iMenuService.getAllItems().stream()
-                .filter(m -> m.getCategory().equals("Drink")).toList());
-        hideOverlay();
-    }
+    // --- LOGIC GIAO DIỆN BÊN PHẢI (ORDER) ---
 
-    @FXML private void filterFood() {
-        renderMenuGrid(iMenuService.getAllItems().stream()
-                .filter(m -> m.getCategory().equals("Food")).toList());
-        hideOverlay();
-    }
-
-    /* ORDER */
+    // Tham số đầu vào là Interface IMenuItem
     private void addToCart(IMenuItem item) {
+        // Kiểm tra xem món đã có trong giỏ chưa
         for (OrderItemWrapper orderItem : currentOrder) {
-            if (orderItem.getMenuItem().getId().equals(item.getId())) {
+            // So sánh ID thông qua Interface
+            if (orderItem.getId().equals(item.getId())) {
+
                 orderItem.increaseQuantity();
                 refreshOrderState();
                 return;
             }
         }
-
-        currentOrder.add(new OrderItemWrapper(item, 1));
+        // Nếu chưa có, tạo mới OrderItem (OrderItem nhận vào IMenuItem trong constructor)
+        IMenuItem newItem = new OrderItemWrapper(item, 1);
+        currentOrder.add((OrderItemWrapper) newItem);
         refreshOrderState();
     }
 
-    @FXML private void handleIncreaseQty() {
+    @FXML
+    private void handleIncreaseQty() {
         OrderItemWrapper selected = orderTable.getSelectionModel().getSelectedItem();
         if (selected != null) {
             selected.increaseQuantity();
@@ -198,28 +219,25 @@ public class MainController {
         }
     }
 
-    @FXML private void handleDecreaseQty() {
+    @FXML
+    private void handleDecreaseQty() {
         OrderItemWrapper selected = orderTable.getSelectionModel().getSelectedItem();
         if (selected != null) {
             selected.decreaseQuantity();
+            if (selected.quantityProperty().get() == 0 ) {
+                currentOrder.remove(selected);
+            }
             refreshOrderState();
         }
     }
 
-    @FXML private void handleRemoveItem() {
+    @FXML
+    private void handleRemoveItem() {
         OrderItemWrapper selected = orderTable.getSelectionModel().getSelectedItem();
         if (selected != null) {
             currentOrder.remove(selected);
             refreshOrderState();
         }
-    }
-    @FXML
-    private void handleApplyDiscount() {
-        Alert alert = new Alert(Alert.AlertType.INFORMATION);
-        alert.setTitle("Khuyến mãi");
-        alert.setHeaderText(null);
-        alert.setContentText("Tính năng áp dụng mã giảm giá đang phát triển.");
-        alert.showAndWait();
     }
 
     private void refreshOrderState() {
@@ -228,13 +246,15 @@ public class MainController {
     }
 
     private void updateTotal() {
-        double total = currentOrder.stream()
-                .mapToDouble(i -> i.subtotalProperty().get())
-                .sum();
-        totalLabel.setText(currencyFormatter.format(total));
+        double total = 0;
+        for (OrderItemWrapper item : currentOrder) {
+            total += item.subtotalProperty().get();
+        }
+        String formatted = currencyFormatter.format(total);
+        totalLabel.setText(formatted);
+        if(subTotalLabel != null) subTotalLabel.setText(formatted);
     }
 
-    /* CHECKOUT */
     @FXML
     private void handleCheckout() throws IOException {
         if (currentOrder.isEmpty()) {
